--- a/deny.toml
+++ b/deny.toml
@@ -11,4 +11,10 @@ ignore = []
 
 [licenses]
 version = 2
-allow = ["MPL-2.0"]
+allow = [
+    "Apache-2.0 WITH LLVM-exception",
+    "Apache-2.0",
+    "MIT",
+    "MPL-2.0",
+    "Unicode-3.0",
+]
