--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,11 +19,13 @@ authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
 version = "0.0.0"
 edition = "2021"
 publish = false
+build = "build.rs"
 
 [dependencies]
 adw = { package = "libadwaita", version = "0.7.0", features = ["v1_6"] }
 glib = { version = "0.20.7", features = ["log", "log_macros"] }
 gtk = { package = "gtk4", version = "0.9.5", features = ["gnome_47"] }
+log = "0.4.22"
 
 [package.metadata.release]
 pre-release-commit-message = "Release {{version}}"
