--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,9 @@ glib = { version = "0.20.7", features = ["log", "log_macros"] }
 gtk = { package = "gtk4", version = "0.9.5", features = ["gnome_47"] }
 log = "0.4.22"
 
+[build-dependencies]
+glob = "0.3.1"
+
 [package.metadata.release]
 pre-release-commit-message = "Release {{version}}"
 tag-message = "Turn On {{tag_name}}"
