Add prerelease hook for release note updates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,4 @@ verify = false
 push = false
 sign-tag = true
 sign-commit = true
+pre-release-hook = ["scripts/prerelease.py", "{{tag_name}}", "{{date}}"]
