Fix copy & paste error

--- a/.github/workflows/gettext.yml
+++ b/.github/workflows/gettext.yml
@@ -41,4 +41,4 @@ jobs:
           body: "Github bot runs make pot :v:"
           assignees: swsnr
           draft: true
-          add-paths: po/de.swsnr.turnon.pot
+          add-paths: po/*.pot
