--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ glib = { version = "0.20.7", features = ["log", "log_macros"] }
 gtk = { package = "gtk4", version = "0.9.5", features = ["gnome_47"] }
 log = "0.4.22"
 semver = "1.0.24"
+strum = { version = "0.27.1", features = ["derive"] }
 
 [build-dependencies]
 glob = "0.3.1"
