--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -6,6 +6,16 @@ who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
 delta = "1.2.1 -> 3.2.0"
 
+[[audits.strum]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-run"
+delta = "0.26.3 -> 0.27.1"
+
+[[audits.strum_macros]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-run"
+delta = "0.26.4 -> 0.27.1"
+
 [[trusted.cairo-rs]]
 criteria = "safe-to-run"
 user-id = 3623 # Sebastian Dröge (sdroege)
