--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -6,6 +6,17 @@ who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
 delta = "1.2.1 -> 3.2.0"
 
+[[audits.ryu]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-run"
+delta = "1.0.5 -> 1.0.19"
+
+[[audits.serde_json]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-run"
+delta = "1.0.138 -> 1.0.139"
+notes = "Only documentation changes and dependency updates."
+
 [[audits.strum]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
@@ -183,6 +194,18 @@ criteria = "safe-to-run"
 user-id = 6741 # Alice Ryhl (Darksonn)
 start = "2021-10-13"
 end = "2026-02-12"
+
+[[trusted.soup3]]
+criteria = "safe-to-run"
+user-id = 54339 # Bilal Elmoussaoui (bilelmoussaoui)
+start = "2022-10-10"
+end = "2026-02-22"
+
+[[trusted.soup3-sys]]
+criteria = "safe-to-run"
+user-id = 54339 # Bilal Elmoussaoui (bilelmoussaoui)
+start = "2022-10-10"
+end = "2026-02-22"
 
 [[trusted.syn]]
 criteria = "safe-to-run"
