--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ semver = "1.0.24"
 strum = { version = "0.27.1", features = ["derive"] }
 serde = { version = "1.0.128", features = ["derive"] }
 serde_json = "1.0.139"
+futures-util = "0.3.31"
 
 [build-dependencies]
 glob = "0.3.1"
