--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ strum = { version = "0.27.1", features = ["derive"] }
 serde = { version = "1.0.128", features = ["derive"] }
 serde_json = "1.0.139"
 futures-util = "0.3.31"
+url = "2.5.4"
 
 [build-dependencies]
 glob = "0.3.1"
