Configure API key for APOD
Add setting for NASA API key, and create a preferences dialog to
configure it.  Add a --preferences argument to open the preferences
dialog without opening a main window.

--- a/de.swsnr.picture-of-the-day.desktop.in
+++ b/de.swsnr.picture-of-the-day.desktop.in
@@ -10,4 +10,9 @@ Categories=GNOME;GTK;Utility;
 Keywords=Gnome;GTK;Picture;Day;Wallpaper;
 StartupNotify=true
 DBusActivatable=true
+Actions=preferences;
 X-GNOME-UsesNotifications=true
+
+[Desktop Action preferences]
+Name=Add new device
+Exec=de.swsnr.picture-of-the-day --preferences
