--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,8 @@ build = "build.rs"
 adw = { package = "libadwaita", version = "0.7.0", features = ["v1_6"] }
 glib = { version = "0.20.7", features = ["log", "log_macros"] }
 gtk = { package = "gtk4", version = "0.9.5", features = ["gnome_47"] }
+gdk4-wayland = { version = "0.9.6", features = ["v4_16"] }
+gdk4-x11 = { version = "0.9.6", features = ["v4_16"] }
 soup = { package = "soup3", version = "0.7.0", features = ["v3_6"] }
 log = "0.4.22"
 semver = "1.0.24"
