Fix application name

--- a/de.swsnr.picture-of-the-day.desktop.in
+++ b/de.swsnr.picture-of-the-day.desktop.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
 # Translators: Do feel free to translate the application name
-Name=Picture Of the Day
+Name=Picture Of The Day
 Comment=A daily picture as your wallpaper
 Exec=de.swsnr.picture-of-the-day
 Type=Application
