--- a/de.swsnr.picture-of-the-day.desktop.in
+++ b/de.swsnr.picture-of-the-day.desktop.in
@@ -14,5 +14,5 @@ Actions=preferences;
 X-GNOME-UsesNotifications=true
 
 [Desktop Action preferences]
-Name=Add new device
+Name=Preferences
 Exec=de.swsnr.picture-of-the-day --preferences
