--- a/resources/de.swsnr.picture-of-the-day.metainfo.xml.in
+++ b/resources/de.swsnr.picture-of-the-day.metainfo.xml.in
@@ -28,7 +28,7 @@
     </keywords>
     <url type="homepage">https://github.com/swsnr/picture-of-the-day</url>
     <url type="bugtracker">https://github.com/swsnr/picture-of-the-day/discussions/categories/ideas-issues</url>
-    <!-- TODO translations link to codeberg translate -->
+    <url type="translate">https://translate.codeberg.org/engage/de-swsnr-picture-of-the-day/</url>
     <url type="help">https://github.com/swsnr/picture-of-the-day/discussions/categories/q-a</url>
     <url type="contact">https://swsnr.de/</url>
     <url type="vcs-browser">https://github.com/swsnr/picture-of-the-day</url>
