--- a/resources/de.swsnr.picture-of-the-day.metainfo.xml.in
+++ b/resources/de.swsnr.picture-of-the-day.metainfo.xml.in
@@ -7,11 +7,11 @@
     <description>
         <p>Get a picture of the day from any of the following sources as your daily wallpaper.</p>
         <ul>
-            <li>NASA Astronomy Picture of the Day</li>
+            <li>NASA Astronomy Picture Of The Day</li>
             <li>Bing</li>
-            <li>NASA Earth Observatory Image of the Day</li>
+            <li>NASA Earth Observatory Image Of The Day</li>
             <li>Simon Stålenhag Artwork</li>
-            <li>Wikimedia Picture of the day</li>
+            <li>Wikimedia Picture Of The day</li>
         </ul>
         <p>Note that all images are protected by copyright; you may not be allowed to use or
             distribute them. Do take a look at the license terms for each image.</p>
