--- a/resources/de.swsnr.picture-of-the-day.metainfo.xml.in
+++ b/resources/de.swsnr.picture-of-the-day.metainfo.xml.in
@@ -11,7 +11,7 @@
             <li>Bing</li>
             <li>NASA Earth Observatory Image Of The Day</li>
             <li>Simon Stålenhag Artwork</li>
-            <li>Wikimedia Picture Of The day</li>
+            <li>Wikimedia Picture Of The Day</li>
         </ul>
         <p>Note that all images are protected by copyright; you may not be allowed to use or
             distribute them. Do take a look at the license terms for each image.</p>
