--- a/de.swsnr.pictureoftheday.desktop.in
+++ b/de.swsnr.pictureoftheday.desktop.in
@@ -2,9 +2,9 @@
 # Translators: Do feel free to translate the application name
 Name=Picture Of The Day
 Comment=A daily picture as your wallpaper
-Exec=de.swsnr.picture-of-the-day
+Exec=de.swsnr.pictureoftheday
 Type=Application
-Icon=de.swsnr.picture-of-the-day
+Icon=de.swsnr.pictureoftheday
 Categories=GNOME;GTK;Utility;
 # Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
 Keywords=Gnome;GTK;Picture;Day;Wallpaper;
@@ -15,4 +15,4 @@ X-GNOME-UsesNotifications=true
 
 [Desktop Action preferences]
 Name=Preferences
-Exec=de.swsnr.picture-of-the-day --preferences
+Exec=de.swsnr.pictureoftheday --preferences
