Add flatpak development manifest

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ resources/*.metainfo.xml
 
 # Compiled settings schemas
 /schemas/*.compiled
+
+# Flatpak outputs
+/.flatpak-builder/
+/.flatpak-repo/
