--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -6,15 +6,31 @@ who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
 delta = "0.7.4 -> 0.7.5"
 
+[[audits.pkg-config]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-deploy"
+delta = "0.3.31 -> 0.3.32"
+
 [[audits.proc-macro-crate]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
 delta = "1.2.1 -> 3.2.0"
 
+[[audits.proc-macro-crate]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-deploy"
+delta = "3.2.0 -> 3.3.0"
+
 [[audits.ryu]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
 criteria = "safe-to-run"
 delta = "1.0.5 -> 1.0.19"
+
+[[audits.ryu]]
+who = "Sebastian Wiesner <sebastian@swsnr.de>"
+criteria = "safe-to-deploy"
+delta = "1.0.19 -> 1.0.20"
+notes = "No code changes"
 
 [[audits.serde_json]]
 who = "Sebastian Wiesner <sebastian@swsnr.de>"
@@ -200,9 +216,15 @@ end = "2026-02-12"
 
 [[trusted.libc]]
 criteria = "safe-to-run"
-user-id = 51017 # Yuki Okushi (JohnTitor)
+user-id = 51017
 start = "2020-03-17"
 end = "2026-02-12"
+
+[[trusted.libc]]
+criteria = "safe-to-run"
+user-id = 55123 # rust-lang-owner
+start = "2024-08-15"
+end = "2026-03-08"
 
 [[trusted.memchr]]
 criteria = "safe-to-run"
