--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -42,6 +42,13 @@
             <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
         </release>
         -->
+        <release version="next" date="9999-01-01">
+            <description>
+                <p>The initial release, with four sources: APOD, Wikimedia, Simon Stålenhag, and Bing.</p>
+                <p>Add a main window to show today's picture of the day and a button to set it as current wallpaper.</p>
+            </description>
+            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
+        </release>
     </releases>
     <project_license>MPL-2.0</project_license>
     <developer id="de.swsnr">
