--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -42,13 +42,14 @@
             <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
         </release>
         -->
-        <release version="next" date="9999-01-01">
+        <release version="0.1.0" date="2025-03-08">
             <description>
                 <p>The initial release, with four sources: APOD, Wikimedia, Simon Stålenhag, and Bing.</p>
                 <p>Add a main window to show today's picture of the day and a button to set it as current wallpaper.</p>
             </description>
             <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
-        </release>
+            <url>https://github.com/swsnr/pictureoftheday/releases/tag/v0.1.0</url>
+    </release>
     </releases>
     <project_license>MPL-2.0</project_license>
     <developer id="de.swsnr">
