Use a shorter summary
Fixes #24

--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -3,7 +3,7 @@
     <id>de.swsnr.pictureoftheday</id>
     <metadata_license>CC0-1.0</metadata_license>
     <name>Picture Of The Day</name>
-    <summary>A daily picture as your wallpaper</summary>
+    <summary>Your daily wallpaper</summary>
     <description>
         <p>Get a picture of the day from any of the following sources as your daily wallpaper.</p>
         <ul>
