Fetch and set wallpaper automatically
Remember the time of the last successful update and then check every 30
minutes whether the last update was more than 12 hours ago.
This automatically does some sort of soon'ish retry if an update failed
due to e.g. an intermittent network error, and it also works across
device sleeps.

Add corresponding settings and preferences UI.

Closes GH-13

--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -42,6 +42,15 @@
             <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
         </release>
         -->
+        <release version="next" date="9999-01-01">
+            <description>
+                <p>Picture Of The Day can now set the daily wallpaper automatically in background.</p>
+            </description>
+            <issues>
+                <issue url="https://github.com/swsnr/turnon/issues/13">GH-13</issue>
+            </issues>
+            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
+        </release>
         <release version="0.1.0" date="2025-03-08">
             <description>
                 <p>The initial release, with four sources: APOD, Wikimedia, Simon Stålenhag, and Bing.</p>
