--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ serde = { version = "1.0.128", features = ["derive"] }
 serde_json = "1.0.139"
 futures = "0.3.31"
 url = "2.5.4"
+rand = { version = "0.8.5", default-features = false }
+rand_core = "0.6.4"
 
 [build-dependencies]
 glob = "0.3.1"
