--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ glob = "0.3.1"
 
 [package.metadata.release]
 pre-release-commit-message = "Release {{version}}"
-tag-message = "Turn On {{tag_name}}"
+tag-message = "Picture Of The Day {{tag_name}}"
 publish = false
 verify = false
 push = false
