--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -44,10 +44,11 @@
         -->
         <release version="next" date="9999-01-01">
             <description>
-                <p>Picture Of The Day can now set the daily wallpaper automatically in background.</p>
+                <p>Picture Of The Day can now set the daily wallpaper automatically in background.  For this purpose, it now requests to be autostarted.</p>
             </description>
             <issues>
                 <issue url="https://github.com/swsnr/turnon/issues/13">GH-13</issue>
+                <issue url="https://github.com/swsnr/turnon/issues/25">GH-25</issue>
             </issues>
             <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
         </release>
