--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -42,7 +42,7 @@
             <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
         </release>
         -->
-        <release version="next" date="9999-01-01">
+        <release version="1.0.0" date="2025-03-22">
             <description>
                 <p>Start automatically and refresh the daily wallpaper automatically every twelve hours.</p>
                 <p>No longer support multiple windows.</p>
@@ -51,7 +51,7 @@
                 <issue url="https://github.com/swsnr/picture-of-the-day/issues/13">GH-13</issue>
                 <issue url="https://github.com/swsnr/picture-of-the-day/issues/25">GH-25</issue>
             </issues>
-            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
+            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/v1.0.0</url>
         </release>
         <release version="0.1.0" date="2025-03-08">
             <description>
