Link sync workflow in flatpak manifest PRs

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -141,5 +141,7 @@ jobs:
           title: "Update flatpak manifest for ${{ github.ref_name }}"
           body: |
             Update flatpak manifest for release ${{ github.ref_name }}.
+
+            After merging, manually dispatch the [sync workflow in the flathub repo](https://github.com/flathub/de.swsnr.pictureoftheday/actions/workflows/sync.yaml) to update the flathub manifest.
           assignees: swsnr
           draft: always-true
