--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -45,9 +45,11 @@
         <release version="next" date="9999-01-01">
             <description>
                 <p>Remember window size and state.</p>
+                <p>Update to GNOME 48.</p>
             </description>
             <issues>
                 <issue url="https://github.com/swsnr/picture-of-the-day/issues/14">GH-14</issue>
+                <issue url="https://github.com/swsnr/picture-of-the-day/issues/30">GH-30</issue>
             </issues>
             <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
         </release>
