--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: appstreamcli metainfo-to-news
-        uses: docker://ghcr.io/gtk-rs/gtk4-rs/gtk4:latest
+        uses: docker://ghcr.io/swsnr/picture-of-the-day/ci:main
         with:
           args: appstreamcli metainfo-to-news resources/de.swsnr.pictureoftheday.metainfo.xml.in news.yaml
       - name: yq eval-all '[.]' -oj news.yaml
