--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ serde = { version = "1.0.128", features = ["derive"] }
 serde_json = "1.0.139"
 futures = "0.3.31"
 url = "2.5.4"
-rand = { version = "0.8.5", default-features = false }
+rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
 rand_core = "0.6.4"
 
 [build-dependencies]
