--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -45,6 +45,7 @@
         <release version="next" date="9999-01-01">
             <description>
                 <p>No longer show preview when setting a wallpaper.</p>
+                <p>Improve scheduling of automatic downloads.</p>
                 <p>Remember window size and state.</p>
                 <p>Update to GNOME 48.</p>
             </description>
