Update screenshots and add new preferences shot
Closes #37

--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -85,6 +85,10 @@
             <caption>A picture of the day from Wikimedia</caption>
         </screenshot>
         <screenshot>
+            <image>https://raw.githubusercontent.com/swsnr/picture-of-the-day/refs/heads/main/screenshots/preferences.png</image>
+            <caption>The preferences dialog with settings for image sources</caption>
+        </screenshot>
+        <screenshot>
             <image>https://raw.githubusercontent.com/swsnr/picture-of-the-day/refs/heads/main/screenshots/start-page.png</image>
             <caption>The empty greeting page with the application icon</caption>
         </screenshot>
