--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -5,13 +5,14 @@
     <name>Picture Of The Day</name>
     <summary>Your daily wallpaper</summary>
     <description>
-        <p>Get a picture of the day from any of the following sources as your daily wallpaper.</p>
+        <p>Get a picture of the day from the following sources as your daily wallpaper.</p>
         <ul>
             <li>NASA Astronomy Picture Of The Day</li>
             <li>Bing</li>
             <li>Simon Stålenhag Artwork</li>
             <li>Wikimedia Picture Of The Day</li>
         </ul>
+        <p>Preview images, pick your favorite source, enable automatic updates, and enjoy a fresh wallpaper every day.</p>
         <p>Note that all images are protected by copyright; you may not be allowed to use or distribute them. Do take a look at the license terms for each image.</p>
     </description>
     <categories>
