--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -43,7 +43,7 @@
             <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
         </release>
         -->
-        <release version="next" date="9999-01-01">
+        <release version="1.1.0" date="2025-03-30">
             <description>
                 <p>Use a more reliable endpoint for Wikimedia images.</p>
                 <p>No longer show preview when setting a wallpaper.</p>
@@ -55,7 +55,7 @@
                 <issue url="https://github.com/swsnr/picture-of-the-day/issues/14">GH-14</issue>
                 <issue url="https://github.com/swsnr/picture-of-the-day/issues/30">GH-30</issue>
             </issues>
-            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
+            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/v1.1.0</url>
         </release>
         <release version="1.0.0" date="2025-03-22">
             <description>
