--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -43,6 +43,15 @@
             <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
         </release>
         -->
+        <release version="next" date="9999-01-01">
+            <description>
+                <p>Add toolbar to go to the previous or next image.</p>
+            </description>
+            <issues>
+                <issue url="https://github.com/swsnr/picture-of-the-day/issues/18">GH-18</issue>
+            </issues>
+            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
+        </release>
         <release version="1.1.0" date="2025-03-30">
             <description>
                 <p>Use a more reliable endpoint for Wikimedia images.</p>
