--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ futures = "0.3.31"
 url = "2.5.4"
 rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
 rand_core = "0.6.4"
+libc = "0.2.170"
 
 [build-dependencies]
 glob = "0.3.1"
