--- a/resources/de.swsnr.pictureoftheday.metainfo.xml.in
+++ b/resources/de.swsnr.pictureoftheday.metainfo.xml.in
@@ -43,7 +43,7 @@
             <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
         </release>
         -->
-        <release version="next" date="9999-01-01">
+        <release version="1.2.0" date="2025-04-06">
             <description>
                 <p>Add overlay toolbar to go to the previous or next image to the image view.</p>
                 <p>Add toolbar buttons to save the current image, and to open the current image in an external application.</p>
@@ -55,7 +55,7 @@
                 <issue url="https://github.com/swsnr/picture-of-the-day/issues/18">GH-18</issue>
                 <issue url="https://github.com/swsnr/picture-of-the-day/issues/50">GH-50</issue>
             </issues>
-            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/next</url>
+            <url>https://github.com/swsnr/picture-of-the-day/releases/tag/v1.2.0</url>
         </release>
         <release version="1.1.0" date="2025-03-30">
             <description>
